fix spacing in bookmarks toolbar, fix tabbrowser panel flashes, fix search button font weight, fix search go button, fix searchbar textbox height

--- a/chrome/communicator/search/searchbar.css
+++ b/chrome/communicator/search/searchbar.css
@@ -1,6 +1,8 @@
 .searchbar-textbox {
   width: 6em;
   min-width: 6em;
+  height: 28px !important;
+
 }
 
 /* ::::: searchbar-engine-button ::::: */
@@ -34,6 +36,7 @@
   padding: 3px;
   list-style-image: url("chrome://global/skin/icons/Search-glass.png");
   -moz-image-region: rect(0px 16px 16px 0px);
+  /*display: none !important;*/
 }
 
 .search-go-button:-moz-system-metric(touch-enabled) {
