--- a/chrome/navigator/navigator.css
+++ b/chrome/navigator/navigator.css
@@ -542,6 +542,11 @@ toolbar[mode="text"] #search-button > .button-box > .button-icon {
   display: none;
 }
 
+/* Removes bold font from the nostalgia search button [BEST USED WITH FONT SUCH AS Charcoal.ffil*/
+#search-button  .button-text {
+  font-weight: normal !important;
+}
+
 /* ::::: search bar ::::: */
 
 .autocomplete-treebody::-moz-tree-cell-text(suggesthint, treecolAutoCompleteComment),
